// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NoIndexMark /> should renders correctly with prop "closed" 1`] = `
<span
  dangerouslySetInnerHTML={
    {
      "__html": "<!--/noindex-->",
    }
  }
/>
`;

exports[`<NoIndexMark /> should renders correctly without prop 1`] = `
<span
  dangerouslySetInnerHTML={
    {
      "__html": "<!--noindex-->",
    }
  }
/>
`;
